--- a/JUEGO_APRENDER/nbproject/private/private.properties
+++ b/JUEGO_APRENDER/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/angel/.netbeans/20/build.properties
+user.properties.file=C:\\Users\\lucho\\AppData\\Roaming\\NetBeans\\17\\build.properties
