--- a/JUEGO_APRENDER/nbproject/project.properties
+++ b/JUEGO_APRENDER/nbproject/project.properties
@@ -44,8 +44,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=21
-javac.target=21
+javac.source=19
+javac.target=19
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -75,7 +75,7 @@ main.class=Juego.juego
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=Oracle_OpenJDK_21.0.2_13
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
